fix(spacing): wrong width

--- a/next-tavla/src/Shared/styles/spacing.css
+++ b/next-tavla/src/Shared/styles/spacing.css
@@ -231,7 +231,7 @@
 }
 
 .w-100 {
-    width: 120%;
+    width: 100%;
 }
 
 .h-1 {
